fix: OOTB type converters
Fixes: #114 Implement OOTB TypeConverters for NUMBER fieldType
Fixes: #51 Make boolean<->number conversion consistent
Fixes: #319 Add BigInteger/BigDecimal type converters
Fixes: #321 Add missing date/time <-> primitives converters